force-app/main/default/objects/Development_Item__c/Development_Item__c.object-meta.xml
<CustomObject>
    <label>Dev Item</label>
    <nameField>
        <label>Development Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dev Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>