force-app/main/default/objects/Development_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Customer_Name__c</columns>
    <columns>Development_Item_Number__c</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Duration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>