force-app/main/default/objects/Development_Item__c/listViews/In_Progress.listView-meta.xml
<ListView>
    <fullName>In_Progress</fullName>
    <columns>Customer_Name__c</columns>
    <columns>Priority__c</columns>
    <columns>Development_Item_Number__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>contains</operation>
        <value>In Progress</value>
    </filters>
    <label>In Progress</label>
</ListView>