force-app/main/default/objects/Development_Item__c/listViews/Lightning_Dev_Items.listView-meta.xml
<ListView>
    <fullName>Lightning_Dev_Items</fullName>
    <columns>Development_Item_Number__c</columns>
    <columns>Priority__c</columns>
    <columns>Assigned_Too__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Lightning</value>
    </filters>
    <label>Lightning Dev Items</label>
    <language>en_US</language>
</ListView>