force-app/main/default/objects/Development_Item__c/listViews/Loves_SF.listView-meta.xml
<ListView>
    <fullName>Loves_SF</fullName>
    <columns>Development_Item_Number__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Actual_Hrs__c</columns>
    <columns>Status__c</columns>
    <columns>TrackIT_Billing_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TrackIt_Billing_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customer_Name__c</field>
        <operation>equals</operation>
        <value>Loves_Marketing,Loves Training</value>
    </filters>
    <label>Loves SF</label>
</ListView>