force-app/main/default/objects/Development_Item__c/listViews/Package_List.listView-meta.xml
<ListView>
    <fullName>Package_List</fullName>
    <columns>Release__c</columns>
    <columns>Development_Item_Number__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Customer_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Package List</label>
</ListView>